--- a/index.html
+++ b/index.html
@@ -38,20 +38,25 @@
             map.on('click', 'publicArt', function (e) {
                 const properties = e.features[0].properties;
                 const photoURL = properties.photourl && properties.photourl.filename
-                    ? `https://covapp.vancouver.ca/PublicArtRegistry/Images/${properties.photourl.filename}`
+                    ? `https://covapp.vancouver.ca/PublicArtRegistry/Images/${encodeURIComponent(properties.photourl.filename)}`
                     : 'No photo available';
 
-                new mapboxgl.Popup()
+                const popupContent = `
+                    <strong>${properties.title_of_work}</strong><br>
+                    Artists: ${properties.ArtistNames || 'N/A'}<br>
+                    Year: ${properties.yearofinstallation || 'N/A'}<br>
+                    Project Statement: ${properties.artistprojectstatement || 'N/A'}<br>
+                    Description: ${properties.descriptionofwork || 'N/A'}<br>
+                    Photocredits: ${properties.photocredits || 'N/A'}<br>
+                    <img src="${photoURL}" alt="Artwork Photo" style="max-width: 100%; max-height: 200px;">
+                `;
+
+                // Set a fixed height for the popup
+                const popupHeight = 300;
+
+                new mapboxgl.Popup({ maxHeight: popupHeight, maxWidth: '300px' })
                     .setLngLat(e.features[0].geometry.coordinates)
-                    .setHTML(`
-                        <strong>${properties.title_of_work}</strong><br>
-                        Artists: ${properties.ArtistNames || 'N/A'}<br>
-                        Year: ${properties.yearofinstallation || 'N/A'}<br>
-                        Project Statement: ${properties.artistprojectstatement || 'N/A'}<br>
-                        Description: ${properties.descriptionofwork || 'N/A'}<br>
-                        Photocredits: ${properties.photocredits || 'N/A'}<br>
-                        <img src="${photoURL}" alt="Artwork Photo" style="max-width: 100%; max-height: 200px;">
-                    `)
+                    .setHTML(popupContent)
                     .addTo(map);
             });
         });
