--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
             zoom: 10
         });
 
-        let popup; // Declare popup outside the event listeners
-
         map.on('load', function () {
             map.addSource('publicArt', {
                 type: 'geojson',
@@ -36,47 +34,20 @@
                 }
             });
 
-            // Add popups
+            // Add a popup with all details including the URL link on click
             map.on('click', 'publicArt', function (e) {
-                const coordinates = e.features[0].geometry.coordinates.slice();
-                const title = e.features[0].properties.title_of_work;
-
-                // Check if artistNames is an array before using filter
-                const artistNames = Array.isArray(e.features[0].properties.ArtistNames)
-                    ? e.features[0].properties.ArtistNames
-                    : [e.features[0].properties.ArtistNames];
-
-                const year = e.features[0].properties.yearofinstallation;
-                const projectStatement = e.features[0].properties.artistprojectstatement || 'N/A';
-                const description = e.features[0].properties.descriptionofwork || 'N/A';
-                const url = e.features[0].properties.url || '#'; // Use # if url is not provided
-
-                // Remove existing popups before opening a new one
-                if (popup) {
-                    popup.remove();
-                }
-
-                popup = new mapboxgl.Popup()
-                    .setLngLat(coordinates)
-                    .setHTML(`<strong>${title}</strong><br>Artists: ${artistNames.filter(name => name !== 'None').join(', ')}<br>Year: ${year}<br>Project Statement: ${projectStatement}<br>Description: ${description}<br><a href="${url}" target="_blank">More details</a>`)
+                const properties = e.features[0].properties;
+                new mapboxgl.Popup()
+                    .setLngLat(e.features[0].geometry.coordinates)
+                    .setHTML(`
+                        <strong>${properties.title_of_work}</strong><br>
+                        Artists: ${properties.ArtistNames || 'N/A'}<br>
+                        Year: ${properties.yearofinstallation || 'N/A'}<br>
+                        Project Statement: ${properties.artistprojectstatement || 'N/A'}<br>
+                        Description: ${properties.descriptionofwork || 'N/A'}<br>
+                        <a href="${properties.url}" target="_blank">More details</a>
+                    `)
                     .addTo(map);
-            });
-
-            // Change the cursor to a pointer when the mouse is over the publicArt layer
-            map.on('mouseenter', 'publicArt', function () {
-                map.getCanvas().style.cursor = 'pointer';
-            });
-
-            // Reset the cursor when it leaves the publicArt layer
-            map.on('mouseleave', 'publicArt', function () {
-                map.getCanvas().style.cursor = '';
-            });
-
-            // Close the popup on map click
-            map.on('click', function () {
-                if (popup) {
-                    popup.remove();
-                }
             });
         });
     </script>
