--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         map.on('load', function () {
             map.addSource('publicArt', {
                 type: 'geojson',
-                data: 'joined_public_art.geojson' // Corrected file name
+                data: 'joined_public_art.geojson'
             });
 
             map.addLayer({
-                id: 'publicArt', // Corrected layer ID
+                id: 'publicArt',
                 type: 'circle',
                 source: 'publicArt',
                 paint: {
@@ -34,18 +34,17 @@
                 }
             });
 
-            // Add a popup with all details including the URL link on click
+            // Add a popup with all details
             map.on('click', 'publicArt', function (e) {
                 const properties = e.features[0].properties;
                 new mapboxgl.Popup()
                     .setLngLat(e.features[0].geometry.coordinates)
                     .setHTML(`
-                        <strong>${properties.title_of_work}</strong><br>
-                        Artists: ${properties.ArtistNames || 'N/A'}<br>
-                        Year: ${properties.yearofinstallation || 'N/A'}<br>
-                        Project Statement: ${properties.artistprojectstatement || 'N/A'}<br>
-                        Description: ${properties.descriptionofwork || 'N/A'}<br>
-                        <a href="${properties.url}" target="_blank">More details</a>
+                    <h2><strong>${properties.title_of_work}</strong></h2>
+                    <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
+                    <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
+                    <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
+                    <a href="${properties.url}" target="_blank">More details</a>
                     `)
                     .addTo(map);
             });
