--- a/index.html
+++ b/index.html
@@ -34,22 +34,32 @@
                 }
             });
 
-            // Add a popup with all details
-            map.on('click', 'publicArt', function (e) {
-                const properties = e.features[0].properties;
-                new mapboxgl.Popup()
-                    .setLngLat(e.features[0].geometry.coordinates)
-                    .setHTML(`
-                    <div style="max-height: 300px; overflow-y: auto;">
-                            <h2><strong>${properties.title_of_work}</strong></h2>
-                            <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
-                            <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
-                            <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
-                            <a href="${properties.url}" target="_blank">More details</a>
-                        </div>
-                    `)
-                    .addTo(map);
-            });
+          // Add a popup with all details
+map.on('click', 'publicArt', function (e) {
+    const properties = e.features[0].properties;
+    const popupContent = `
+        <div style="max-height: 300px; overflow-y: auto;">
+            <h2><strong>${properties.title_of_work}</strong></h2>
+            <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
+            <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
+            <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
+            <a href="${properties.url}" target="_blank">More details</a>
+        </div>
+    `;
+    
+    const popup = new mapboxgl.Popup()
+        .setLngLat(e.features[0].geometry.coordinates)
+        .setHTML(popupContent)
+        .addTo(map);
+
+    // Add an event listener to set the scroll position to the top when the popup is opened
+    popup.on('open', function () {
+        const popupContentDiv = document.querySelector('.mapboxgl-popup-content > div');
+        if (popupContentDiv) {
+            popupContentDiv.scrollTop = 0;
+        }
+    });
+});
         });
     </script>
 </body>
