--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
             });
 
           // Add a popup with all details
-map.on('click', 'publicArt', function (e) {
-    const properties = e.features[0].properties;
-    const popupContent = `
-        <div style="max-height: 300px; overflow-y: auto;">
-            <h2><strong>${properties.title_of_work}</strong></h2>
-            <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
-            <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
-            <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
-            <a href="${properties.url}" target="_blank">More details</a>
-        </div>
-    `;
-    
-    const popup = new mapboxgl.Popup()
-        .setLngLat(e.features[0].geometry.coordinates)
-        .setHTML(popupContent)
-        .addTo(map);
+          map.on('click', 'publicArt', function (e) {
+            const properties = e.features[0].properties;
+            const popupContent = `
+                <div style="max-height: 300px; overflow-y: auto;">
+                    <h2><strong>${properties.title_of_work}</strong></h2>
+                    <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
+                    <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
+                    <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
+                    <a href="${properties.url}" target="_blank">More details</a>
+                </div>
+            `;
 
-    // Add an event listener to set the scroll position to the top when the popup is opened
-    popup.on('open', function () {
-        const popupContentDiv = document.querySelector('.mapboxgl-popup-content > div');
-        if (popupContentDiv) {
-            popupContentDiv.scrollTop = 0;
-        }
-    });
-});
+            const popup = new mapboxgl.Popup()
+                .setLngLat(e.features[0].geometry.coordinates)
+                .setHTML(popupContent)
+                .addTo(map);
+
+            // Add a delay to ensure that the scroll position is set after the content has been fully rendered
+            setTimeout(() => {
+                const popupContentDiv = document.querySelector('.mapboxgl-popup-content > div');
+                if (popupContentDiv) {
+                    popupContentDiv.scrollTop = 0;
+                }
+            }, 100); // You can adjust the delay (in milliseconds) as needed
         });
+});
     </script>
 </body>
 </html>
