--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
     <style>
-        /* Add a custom cursor style for clickable points */
         .mapboxgl-popup-content:hover {
             cursor: pointer;
         }
@@ -20,62 +19,72 @@
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/jonathanwestberry/clt9l2gw600k501o84gvj0ajk',
-            center: [-123.1207, 49.2827], // Longitude, latitude of Vancouver
+            center: [-123.1207, 49.2827], // Vancouver
             zoom: 10
         });
 
         map.on('load', function () {
-            map.addSource('publicArt', {
-                type: 'geojson',
-                data: 'joined_public_art.geojson'
-            });
+            map.loadImage(
+                'https://docs.mapbox.com/mapbox-gl-js/assets/cat.png',
+                (error, image) => {
+                    if (error) throw error;
 
-            map.addLayer({
-                id: 'publicArt',
-                type: 'circle',
-                source: 'publicArt',
-                paint: {
-                    'circle-radius': 6,
-                    'circle-color': '#B42222'
+                    // Add the image to the map style.
+                    map.addImage('cat', image);
+
+                    map.addSource('publicArt', {
+                        type: 'geojson',
+                        data: 'joined_public_art.geojson'
+                    });
+
+                    map.addLayer({
+                        id: 'publicArt',
+                        type: 'symbol',
+                        source: 'publicArt',
+                        layout: {
+                            'icon-image': 'cat', // reference the image
+                            'icon-size': 0.25
+                        }
+                    });
+
+                    // Popup
+                    map.on('click', 'publicArt', function (e) {
+                        const properties = e.features[0].properties;
+                        const popupContent = `
+                            <div style="max-height: 300px; overflow-y: auto;">
+                                <h3><strong>${properties.title_of_work}</strong></h3>
+                                <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
+                                <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
+                                <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
+                                <a href="${properties.url}" target="_blank">More details</a>
+                            </div>
+                        `;
+
+                        const popup = new mapboxgl.Popup()
+                            .setLngLat(e.features[0].geometry.coordinates)
+                            .setHTML(popupContent)
+                            .addTo(map);
+
+                        // Add a delay to ensure that the scroll position is set after the content has been fully rendered
+                        setTimeout(() => {
+                            const popupContentDiv = document.querySelector('.mapboxgl-popup-content > div');
+                            if (popupContentDiv) {
+                                popupContentDiv.scrollTop = 0;
+                            }
+                        }, 10); // delay (in milliseconds)
+                    });
+
+                    // Add a hover effect to indicate clickable points
+                    map.on('mouseenter', 'publicArt', function () {
+                        map.getCanvas().style.cursor = 'pointer';
+                    });
+
+                    // Reset cursor when not hovering over clickable points
+                    map.on('mouseleave', 'publicArt', function () {
+                        map.getCanvas().style.cursor = '';
+                    });
                 }
-            });
-
-            // Add a popup with all details
-            map.on('click', 'publicArt', function (e) {
-                const properties = e.features[0].properties;
-                const popupContent = `
-                    <div style="max-height: 300px; overflow-y: auto;">
-                        <h2><strong>${properties.title_of_work}</strong></h2>
-                        <span><strong>Artists:</strong> ${properties.ArtistNames || 'N/A'}</span><br>
-                        <span><strong>Year:</strong> ${properties.yearofinstallation || 'N/A'}</span><br>
-                        <span><strong>Project Statement:</strong> ${properties.artistprojectstatement || 'N/A'}</span><br>
-                        <a href="${properties.url}" target="_blank">More details</a>
-                    </div>
-                `;
-
-                const popup = new mapboxgl.Popup()
-                    .setLngLat(e.features[0].geometry.coordinates)
-                    .setHTML(popupContent)
-                    .addTo(map);
-
-                // Add a delay to ensure that the scroll position is set after the content has been fully rendered
-                setTimeout(() => {
-                    const popupContentDiv = document.querySelector('.mapboxgl-popup-content > div');
-                    if (popupContentDiv) {
-                        popupContentDiv.scrollTop = 0;
-                    }
-                }, 100); // You can adjust the delay (in milliseconds) as needed
-            });
-
-            // Add a hover effect to indicate clickable points
-            map.on('mouseenter', 'publicArt', function () {
-                map.getCanvas().style.cursor = 'pointer';
-            });
-
-            // Reset cursor when not hovering over clickable points
-            map.on('mouseleave', 'publicArt', function () {
-                map.getCanvas().style.cursor = '';
-            });
+            );
         });
     </script>
 </body>
