Added art gallery icon to represent public art locations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     if (error) throw error;
 
                     // Add the image to the map style.
-                    map.addImage('art', image);
+                    map.addImage('art', 'art-gallery.png');
 
                     map.addSource('publicArt', {
                         type: 'geojson',
