--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                         layout: {
                             'icon-image': 'art-gallery-icon', // reference the image
                             'icon-size': 1
-                        }
+                        },
+                        paint: {
+                        'icon-opacity': 1, // Set opacity to 1 to make sure the icons are fully visible
+                        'icon-color': '#FFA500' // Set the icon color to orange
+                    }
                     });
 
                     // Popup
