--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="map" style="width: 100%; height: 600px;"></div>
     <script>
-        mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
+        mapboxgl.accessToken = 'your-access-token';
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/jonathanwestberry/clt9l2gw600k501o84gvj0ajk',
@@ -24,7 +24,7 @@
         });
 
         map.on('load', function () {
-            // Load the image
+            // Load the image for the art gallery icon
             map.loadImage('art-gallery.png', function (error, image) {
                 if (error) throw error;
 
@@ -34,24 +34,19 @@
                 map.addSource('publicArt', {
                     type: 'geojson',
                     data: 'joined_public_art.geojson',
-                    cluster: true, // Enable clustering
-                    clusterRadius: 50, // Radius of each cluster when clustering points
+                    cluster: true,
+                    clusterMaxZoom: 14, // Max zoom to cluster points on
+                    clusterRadius: 50 // Radius of each cluster when clustering points (pixels)
                 });
 
                 map.addLayer({
                     id: 'clusters',
-                    type: 'circle',
+                    type: 'symbol',
                     source: 'publicArt',
                     filter: ['has', 'point_count'],
-                    paint: {
-                        'circle-color': '#FFA500', // Orange color for clusters
-                        'circle-radius': [
-                            'step',
-                            ['get', 'point_count'],
-                            20, // Small circle radius for fewer points in the cluster
-                            30, // Larger circle radius for more points in the cluster
-                            40 // Adjust this value based on your preference
-                        ]
+                    layout: {
+                        'icon-image': 'art-gallery-icon', // Use the art gallery icon
+                        'icon-size': 0.5
                     }
                 });
 
@@ -61,7 +56,7 @@
                     source: 'publicArt',
                     filter: ['has', 'point_count'],
                     layout: {
-                        'text-field': '{point_count_abbreviated}', // Show the count of points in the cluster
+                        'text-field': '{point_count_abbreviated}',
                         'text-font': ['DIN Offc Pro Medium', 'Arial Unicode MS Bold'],
                         'text-size': 12
                     }
@@ -73,15 +68,25 @@
                     source: 'publicArt',
                     filter: ['!', ['has', 'point_count']],
                     layout: {
-                        'icon-image': 'art-gallery-icon',
-                        'icon-size': 1
-                    },
-                    paint: {
-                        'icon-opacity': 1, // Set opacity to 1 to make sure the icons are fully visible
+                        'icon-image': 'art-gallery-icon', // Use the art gallery icon for individual points
+                        'icon-size': 0.5
                     }
                 });
 
                 // Popup
+                map.on('click', 'clusters', function (e) {
+                    const features = map.queryRenderedFeatures(e.point, { layers: ['clusters'] });
+                    const clusterId = features[0].properties.cluster_id;
+                    map.getSource('publicArt').getClusterExpansionZoom(clusterId, function (err, zoom) {
+                        if (err) return;
+
+                        map.easeTo({
+                            center: features[0].geometry.coordinates,
+                            zoom: zoom
+                        });
+                    });
+                });
+
                 map.on('click', 'unclustered-point', function (e) {
                     const properties = e.features[0].properties;
                     const popupContent = `
@@ -109,12 +114,11 @@
                 });
 
                 // Add a hover effect to indicate clickable points
-                map.on('mouseenter', 'unclustered-point', function () {
+                map.on('mouseenter', 'clusters', function () {
                     map.getCanvas().style.cursor = 'pointer';
                 });
 
-                // Reset cursor when not hovering over clickable points
-                map.on('mouseleave', 'unclustered-point', function () {
+                map.on('mouseleave', 'clusters', function () {
                     map.getCanvas().style.cursor = '';
                 });
             });
