--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="map" style="width: 100%; height: 600px;"></div>
     <script>
-        mapboxgl.accessToken = 'your-access-token';
+        mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/jonathanwestberry/clt9l2gw600k501o84gvj0ajk',
