--- a/index.html
+++ b/index.html
@@ -34,30 +34,62 @@
                 // Add the public art data source
                 map.addSource('publicArt', {
                     type: 'geojson',
-                    data: 'joined_public_art.geojson'
+                    data: 'joined_public_art.geojson',
+                    cluster: true,
+                    clusterMaxZoom: 14, // Max zoom to cluster points on
+                    clusterRadius: 50 // Radius of each cluster when clustering points (pixels)
                 });
 
-                // Add the public art layer
+                // Add the public art cluster layer
                 map.addLayer({
-                    id: 'publicArt',
-                    type: 'symbol',
+                    id: 'clusters',
+                    type: 'circle',
                     source: 'publicArt',
-                    layout: {
-                        'icon-image': 'art-gallery-icon', // reference the custom icon
-                        'icon-size': {
+                    filter: ['has', 'point_count'],
+                    paint: {
+                        'circle-color': '#FFA500', // Color of clustered points
+                        'circle-radius': {
+                            property: 'point_count',
+                            type: 'interval',
                             stops: [
-                                [10, 0.5], // Adjust the size at different zoom levels
-                                [15, 1.5]
+                                [0, 10], // Adjust the size at different cluster sizes
+                                [10, 20],
+                                [20, 30]
                             ]
                         }
+                    }
+                });
+
+                // Add the public art cluster count layer
+                map.addLayer({
+                    id: 'cluster-count',
+                    type: 'symbol',
+                    source: 'publicArt',
+                    filter: ['has', 'point_count'],
+                    layout: {
+                        'text-field': '{point_count_abbreviated}', // Display the count of points in the cluster
+                        'text-font': ['DIN Offc Pro Medium', 'Arial Unicode MS Bold'],
+                        'text-size': 12
                     },
                     paint: {
-                        'circle-radius': 0 // Set circle radius to 0 to remove red circles
+                        'text-color': '#FFFFFF' // Color of the count text
+                    }
+                });
+
+                // Add the public art unclustered layer
+                map.addLayer({
+                    id: 'unclustered-point',
+                    type: 'symbol',
+                    source: 'publicArt',
+                    filter: ['!', ['has', 'point_count']],
+                    layout: {
+                        'icon-image': 'art-gallery-icon', // Reference the custom icon
+                        'icon-size': 0.5 // Adjust the size of the unclustered icons
                     }
                 });
 
                 // Popup
-                map.on('click', 'publicArt', function (e) {
+                map.on('click', 'unclustered-point', function (e) {
                     const properties = e.features[0].properties;
                     const popupContent = `
                         <div style="max-height: 300px; overflow-y: auto;">
@@ -74,26 +106,4 @@
                         .setHTML(popupContent)
                         .addTo(map);
 
-                    // Add a delay to ensure that the scroll position is set after the content has been fully rendered
-                    setTimeout(() => {
-                        const popupContentDiv = document.querySelector('.mapboxgl-popup-content > div');
-                        if (popupContentDiv) {
-                            popupContentDiv.scrollTop = 0;
-                        }
-                    }, 10); // delay (in milliseconds)
-                });
-
-                // Add a hover effect to indicate clickable points
-                map.on('mouseenter', 'publicArt', function () {
-                    map.getCanvas().style.cursor = 'pointer';
-                });
-
-                // Reset cursor when not hovering over clickable points
-                map.on('mouseleave', 'publicArt', function () {
-                    map.getCanvas().style.cursor = '';
-                });
-            });
-        });
-    </script>
-</body>
-</html>
+                    // Add a
