--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
                 source: 'publicArt',
                 layout: {
                     'icon-image': 'art-gallery-icon', // reference the custom icon
-                    'icon-size': {
-                        stops: [
-                            [10, 0.5], // Adjust the size at different zoom levels
-                            [15, 1.5]
-                        ]
-                    },
+                    'icon-size': 1,
                     'icon-allow-overlap': true, // Allow icons to overlap
                 }
             });
