--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vancouver Public Art Map</title>
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
+    <script src="https://unpkg.com/supercluster@7.1.2/dist/supercluster.min.js"></script>
     <style>
         .mapboxgl-popup-content:hover {
             cursor: pointer;
@@ -34,23 +35,79 @@
                 // Add the public art data source
                 map.addSource('publicArt', {
                     type: 'geojson',
-                    data: 'joined_public_art.geojson'
+                    data: 'joined_public_art.geojson',
+                    cluster: true,
+                    clusterMaxZoom: 14,
+                    clusterRadius: 50
                 });
 
-             // Add the public art layer
-            map.addLayer({
-                id: 'publicArt',
-                type: 'symbol',
-                source: 'publicArt',
-                layout: {
-                    'icon-image': 'art-gallery-icon', // reference the custom icon
-                    'icon-size': 1,
-                    //'icon-allow-overlap': true, // Allow icons to overlap
-                }
-            });
+                // Create a cluster layer
+                map.addLayer({
+                    id: 'clusters',
+                    type: 'circle',
+                    source: 'publicArt',
+                    filter: ['has', 'point_count'],
+                    paint: {
+                        'circle-color': [
+                            'step',
+                            ['get', 'point_count'],
+                            '#51bbd6',
+                            10,
+                            '#f1f075',
+                            20,
+                            '#f28cb1'
+                        ],
+                        'circle-radius': [
+                            'step',
+                            ['get', 'point_count'],
+                            20,
+                            10,
+                            30,
+                            20,
+                            40
+                        ]
+                    }
+                });
 
+                // Create a layer for individual points
+                map.addLayer({
+                    id: 'cluster-count',
+                    type: 'symbol',
+                    source: 'publicArt',
+                    filter: ['has', 'point_count'],
+                    layout: {
+                        'text-field': '{point_count_abbreviated}',
+                        'text-font': ['DIN Offc Pro Medium', 'Arial Unicode MS Bold'],
+                        'text-size': 12
+                    }
+                });
+
+                // Add the public art layer
+                map.addLayer({
+                    id: 'publicArt',
+                    type: 'symbol',
+                    source: 'publicArt',
+                    layout: {
+                        'icon-image': 'art-gallery-icon', // reference the custom icon
+                        'icon-size': 1,
+                        'icon-allow-overlap': true, // Allow icons to overlap
+                    }
+                });
 
                 // Popup
+                map.on('click', 'clusters', function (e) {
+                    const features = map.queryRenderedFeatures(e.point, { layers: ['clusters'] });
+                    const clusterId = features[0].properties.cluster_id;
+                    map.getSource('publicArt').getClusterExpansionZoom(clusterId, function (err, zoom) {
+                        if (err) return;
+
+                        map.easeTo({
+                            center: features[0].geometry.coordinates,
+                            zoom: zoom
+                        });
+                    });
+                });
+
                 map.on('click', 'publicArt', function (e) {
                     const properties = e.features[0].properties;
                     const popupContent = `
