--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     layout: {
                         'icon-image': 'art-gallery-icon', // reference the custom icon
                         'icon-size': 1,
-                        'icon-allow-overlap': true, // Allow icons to overlap
+                        // 'icon-allow-overlap': true, // Allow icons to overlap
                     }
                 });
 
